# text-to-sql-refine-tuning

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  environment.yml  pr_12_error_log.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_dev_env.sh
.github/workflows/: claude.yml  docker.yml  publish-model.yml  tests.yml
config/: __init__.py  config.py  config.yaml
config/accelerate/: accelerate.yaml
config/dataset/: dataset.yaml
config/evaluation/: evaluation.yaml
config/hf/: hf.yaml
config/inference/: inference.yaml
config/training/: training.yaml
config/wandb/: wandb.yaml
docs/: deployment.md  getting-started.md  index.md  rubrics.md  troubleshooting.md
scripts/: DATA_PREPARATION.md  analyze_data.py  analyze_errors.py  benchmark.py  inference.py  prepare_data.py  publish_to_hub.py  test_environment.py  test_model.py  train.py
src/: __init__.py
src/data/: __init__.py  dataset_loader.py  grpo_formatter.py  preprocessor.py
src/environments/: __init__.py
src/environments/sql_env/: README.md  __init__.py  environment.py  prompts.py  utils.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/inference/: __init__.py  api.py  cli.py  inference_engine.py
src/models/: __init__.py  config_utils.py  model_loader.py
src/rubrics/: __init__.py  batch_scorer.py  sql_rubric.py
src/training/: __init__.py  callbacks.py  config_builder.py  grpo_trainer.py
src/utils/: logging_utils.py  sql_parser.py
tests/: __init__.py  test_data_pipeline.py  test_environment.py  test_evaluation.py  test_inference.py  test_model.py  test_model_loading.py  test_rubrics.py  test_training.py
